--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "micro-markdown",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "cache": "node cache.js",
+    "dev": "NODE_ENV=dev node server.js",
     "start": "node server.js",
     "test": "jest --forceExit",
     "watch": "NODE_ENV=dev nodemon -w server.js -w index.js server.js"
