--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "micro-markdown",
-  "version": "0.5.2",
-  "description": "",
+  "version": "0.6.0",
+  "description": "A markdown server.",
   "main": "index.js",
+  "repository": "zgreen/micro-markdown",
+  "bugs": "https://github.com/zgreen/micro-markdown/issues",
+  "homepage": "https://github.com/zgreen/micro-markdown",
   "scripts": {
     "cache": "node cache.js",
     "dev": "NODE_ENV=dev node server.js",
