--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "cache": "node cache.js",
     "dev": "NODE_ENV=dev node server.js",
+    "lint": "eslint",
     "start": "node server.js",
     "test": "jest --forceExit",
     "watch": "NODE_ENV=dev nodemon -w server.js -w index.js server.js"
@@ -21,11 +22,16 @@
     "marked": "^0.3.6",
     "micro": "^9.0.0",
     "openssl-self-signed-certificate": "^1.1.6",
-    "query-string": "^5.0.0",
     "redis": "^2.8.0"
   },
   "devDependencies": {
     "axios": "^0.16.2",
+    "eslint": "^4.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jest": "^21.1.0",
     "nodemon": "^1.12.1"
   }
